fix aligncenter class
http://forum.semiologic.com/discussion/5006/post-page-editor-issues-on-semreloaded/

git-svn-id: file:///Users/michaelkoepke/svn/semiologic/themes/sem-reloaded/trunk@818 6c9c31c4-cb3d-4424-af3d-876279169c7e

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name: Semiologic, Reloaded
 Theme URI: http://www.semiologic.com/software/wp-themes/sem-reloaded/
 Description: The Semiologic theme, reloaded
-Version: 0.5
+Version: 0.6 alpha
 Author: Denis de Bernardy
 Author URI: http://www.mesoconcepts.com
 */
@@ -394,9 +394,12 @@ h2 a {
 
 .skin .aligncenter
 {
-	display: block;
 	margin-left: auto;
 	margin-right: auto;
+}
+
+.skin img.aligncenter {
+	display: block;
 }
 
 .skin .alignleft
